--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^1.1.0",
     "gulp-cssmin": "^0.2.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-fontmin": "^0.7.4",
     "gulp-htmlmin": "^4.0.0",
     "gulp-imagemin": "^4.1.0",
